# parmetis

./: CMakeLists.txt  README.md
libparmetis/: wave.c
metis/: CMakeLists.txt
metis/GKlib/: csr.c  getopt.c
metis/programs/: CMakeLists.txt
programs/: CMakeLists.txt
